--- a/itis3135/project/project_overview.html
+++ b/itis3135/project/project_overview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Overview – RadiateTPS</title>
-    <link rel="stylesheet" href="styles.css"> 
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <style>
 
         body {
@@ -97,7 +97,7 @@
 
     <section>
         <h3>Wireframe</h3>
-        <img src="images/HomePage.drawio.png">
+        <img src="images/HomePage.drawio.png" alt="Home page design">
         <br>
         View on google drive: <a href="https://drive.google.com/file/d/1siupWXkJG5CT0m4Y283yLJ44JivnM1oQ/view?usp=sharing">here</a>
         
@@ -105,7 +105,7 @@
 
     <section>
         <h3>Site Map</h3>
-        <img src="images/SiteMap.drawio.png">
+        <img src="images/SiteMap.drawio.png" alt="Site map design">
         <br>
         View on google drive: <a href="https://drive.google.com/file/d/1OMe-952JocMQLFh447jJXNFXbYOz1B33/view?usp=sharing">here</a>
         
@@ -179,16 +179,16 @@
     <section>
         <h3>Dynamic Functionality</h3>
         <ul>
-            <li><strong>Image Gallery:</strong> Used on the RadiateTPS project page to showcase visuals of dose overlays, CT scans, and UI screenshots.</li> 
-            <p>Example link: <a href="https://www.w3schools.com/css/css_image_gallery.asp"> W3Schools Image Gallery</a> </p>
-            <li><strong>Expandable Q&A:</strong> On the "What is TPS?" page, FAQs will be shown using expandable sections to reduce clutter and improve readability.</li> 
-            <p>Example link: <a href="https://www.w3schools.com/howto/howto_js_accordion.asp"> W3Schools Accordian Tutorial</a> </p>
-            <li><strong>Expandable Technical Sections:</strong> On the "Technical Details" page, sections describing workflows or architecture can be expanded/collapsed.</li>
-            <p>Example link: <a href="https://www.w3schools.com/howto/howto_js_accordion.asp"> W3Schools Accordian Tutorial</a> </p>
-            <li><strong>Validated Contact Form:</strong> The "Contact" page will include a form that checks for empty fields, valid email format, and a required message before submission.</li>
-            <p>Example link: <a href="https://www.w3schools.com/js/js_validation.asp"> W3Schools JS Validation</a> </p>
-            <li><strong>AJAX Thank You on Contact Page submission:</strong> Form should disappear and notify user (say Thank You or something like that)</li>
-            <p>Example link: <a href="https://www.formbackend.com/examples/simple-contact-form-using-ajax?utm_source=chatgpt.com"> Form Backend AJAX Form Submission Example</a> </p>
+            <li><strong>Image Gallery:</strong> Used on the RadiateTPS project page to showcase visuals of dose overlays, CT scans, and UI screenshots. <br>
+            Example link: <a href="https://www.w3schools.com/css/css_image_gallery.asp"> W3Schools Image Gallery</a> </li>
+            <li><strong>Expandable Q&A:</strong> On the "What is TPS?" page, FAQs will be shown using expandable sections to reduce clutter and improve readability. <br>
+            Example link: <a href="https://www.w3schools.com/howto/howto_js_accordion.asp"> W3Schools Accordian Tutorial</a> </li>
+            <li><strong>Expandable Technical Sections:</strong> On the "Technical Details" page, sections describing workflows or architecture can be expanded/collapsed. <br>
+            Example link: <a href="https://www.w3schools.com/howto/howto_js_accordion.asp"> W3Schools Accordian Tutorial</a> </li>
+            <li><strong>Validated Contact Form:</strong> The "Contact" page will include a form that checks for empty fields, valid email format, and a required message before submission. <br>
+            Example link: <a href="https://www.w3schools.com/js/js_validation.asp"> W3Schools JS Validation</a> </li>
+            <li><strong>AJAX Thank You on Contact Page submission:</strong> Form should disappear and notify user (say Thank You or something like that)  <br>
+            Example link: <a href="https://www.formbackend.com/examples/simple-contact-form-using-ajax?utm_source=chatgpt.com"> Form Backend AJAX Form Submission Example</a> </li>
         </ul>
 
     </section>
