--- a/itis3135/project/technical-details.html
+++ b/itis3135/project/technical-details.html
@@ -5,54 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technical Details - RadiateTPS</title>
     <link rel="stylesheet" href="/itis3135/project/styles/default.css">
+    <link rel="stylesheet" href="/itis3135/project/styles/tech-details.css">
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <div data-include="components/header.html"></div>
-        </nav>
     </header>
 
     <main>
-        <section>
+        <section class="hero">
             <h2>Technical Details</h2>
             <p>
                 RadiateTPS is powered by a combination of web technologies and DICOM handling libraries. It takes advantage of OpenTPS's Python-based dose computation capabilities and modern frontend frameworks to deliver a responsive and educational experience.
             </p>
         </section>
 
-        <section>
-            <h3>Tech Stack</h3>
-            <ul>
-                <li><strong>Frontend:</strong> HTML5, CSS3, JavaScript, React.js (planned)</li>
-                <li><strong>Backend:</strong> Flask (Python), OpenTPS core components</li>
-                <li><strong>Data:</strong> DICOM, RT Structure Sets, CT images</li>
-                <li><strong>Tools:</strong> pydicom, numpy, matplotlib, Plotly</li>
-            </ul>
-        </section>
+        <div class="accordion">
+            <div class="accordion-item">
+                <div class="accordion-question" data-target="section1">Server-Side vs. Browser Rendering</div>
+                <div class="accordion-answer" id="section1">
+                    <p>Server-side processing includes DICOM parsing, dose calculation, and ROI interpretation using OpenTPS, Matplotlib, numpy, and Flask in Python. The browser handles interactive visualizations and UI rendering with JavaScript and Plotly.</p>
+                </div>
+            </div>
 
-        <section>
-            <h3>Workflow Overview</h3>
-            <p>The user loads a dataset → selects ROI/dose parameters → receives processed dose visualization in-browser.</p>
-            <p>Below is a simplified visual breakdown:</p>
-            <img src="images/workflow_diagram.png" alt="Workflow Diagram" style="max-width:100%; height:auto;">
-        </section>
+            <div class="accordion-item">
+                <div class="accordion-question" data-target="section2">Tech Stack, Libraries, and Tools</div>
+                <div class="accordion-answer" id="section2">
+                    <ul>
+                        <li><strong>Frontend:</strong> HTML, CSS, JavaScript</li>
+                        <li><strong>Backend:</strong> Flask (Python), OpenTPS core components</li>
+                        <li><strong>Data:</strong> DICOM, RT Structure Sets, CT images</li>
+                        <li><strong>Tools:</strong> pydicom, numpy, matplotlib, Plotly</li>
+                    </ul>
+                </div>
+            </div>
 
-        <section>
-            <h3>Expandable Sections (Planned)</h3>
-            <p>We plan to include accordion-style expandable sections for each component, such as:</p>
-            <ul>
-                <li>How dose calculation is performed</li>
-                <li>Explanation of DVH and ROI interpretation</li>
-                <li>How we integrate Python with frontend</li>
-            </ul>
-        </section>
+            <div class="accordion-item">
+                <div class="accordion-question" data-target="section3">Workflow</div>
+                <div class="accordion-answer" id="section3">
+                    <p>The user loads or selects a dataset → datasets (DICOM files) are loaded and parsed for correct files (radiation therapy structs/RTStructs) → 
+                        Regions of Interests (ROIS) are displayed → user selects ROI/dose parameters → receives processed dose visualization in-browser.</p>
+                </div>
+            </div>
+
+            <div class="accordion-item">
+                <div class="accordion-question" data-target="section4">OpenTPS</div>
+                <div class="accordion-answer" id="section4">
+                    <p>OpenTPS is an open source treatment planning system, developed in Python, made for cancer and radiation therapy research, collaboration, and innovation. Visit their website <a href="https://www.opentps.org/">here.</a></p>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
-        <p>Created by Adrian Khlim | UNC Charlotte | Last updated April 2025</p>
+        <div data-include="components/footer.html"></div>
     </footer>
 
+    <script>
+        document.querySelectorAll('.accordion-question').forEach((question) => {
+            question.addEventListener('click', () => {
+                const targetId = question.getAttribute('data-target');
+                const targetAnswer = document.getElementById(targetId);
+                targetAnswer.classList.toggle('expanded');
+            });
+        });
+    </script>
     <script src="/itis3135/project/scripts/HTMLInclude.min.js"></script>
-
 </body>
 </html>
