--- a/itis3135/project/contact.html
+++ b/itis3135/project/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - RadiateTPS</title>
-    <link rel="stylesheet" href="/itis3135/project/styles/default.css">
+    <link rel="stylesheet" href="styles/default.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <style>
         #contact-sec {
@@ -79,6 +79,6 @@
             }, 500);
         });
     </script>
-    <script src="/itis3135/project/scripts/HTMLInclude.min.js"></script>
+    <script src="scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
