--- a/itis3135/project/radiatetps-project.html
+++ b/itis3135/project/radiatetps-project.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My TPS Project - RadiateTPS</title>
-    <link rel="stylesheet" href="/itis3135/project/styles/default.css">
-    <link rel="stylesheet" href="/itis3135/project/styles/radiate.css">
+    <link rel="stylesheet" href="styles/default.css">
+    <link rel="stylesheet" href="styles/radiate.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -86,6 +86,6 @@
             showImage(currentIndex);
         }
     </script>
-    <script src="/itis3135/project/scripts/HTMLInclude.min.js"></script>
+    <script src="scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
