--- a/itis3135/project/technical-details.html
+++ b/itis3135/project/technical-details.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technical Details - RadiateTPS</title>
-    <link rel="stylesheet" href="/itis3135/project/styles/default.css">
-    <link rel="stylesheet" href="/itis3135/project/styles/tech-details.css">
+    <link rel="stylesheet" href="styles/default.css">
+    <link rel="stylesheet" href="styles/tech-details.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -71,6 +71,6 @@
             });
         });
     </script>
-    <script src="/itis3135/project/scripts/HTMLInclude.min.js"></script>
+    <script src="scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
