--- a/itis3135/project/what-is-tps.html
+++ b/itis3135/project/what-is-tps.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What is TPS? - RadiateTPS</title>
-    <link rel="stylesheet" href="/itis3135/project/styles/default.css">
+    <link rel="stylesheet" href="styles/default.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 
@@ -79,6 +79,6 @@
 });
 
     </script>
-    <script src="/itis3135/project/scripts/HTMLInclude.min.js"></script>
+    <script src="scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
