Fixed class issues for cards

--- a/itis3135/project/index.html
+++ b/itis3135/project/index.html
@@ -26,21 +26,25 @@
         <section class="cards-section">
             <h3 class="cards-section-h3">What You'll Find Here</h3>
             <div class="card-g">
+
                 <div class="card">
-                    <h4 class="card-h4">Learn About TPS</h4>
-                    <p>Understand the fundamentals of Treatment Planning Systems and their use in radiation therapy.</p>
+                    <h4>Learn About TPS</h4>
+                    <p>Understand the fundamentals of Treatment Planning Systems and their use in radiation therapy.</p> 
                     <a href="what-is-tps.html" class="card-button">Learn More</a>
                 </div>
+
                 <div class="card">
                     <h4>My TPS Project</h4>
                     <p>Explore the RadiateTPS project guided by Dr. Yan, with screenshots and progress insights.</p>
                     <a href="radiatetps-project.html" class="card-button">View Project</a>
                 </div>
+
                 <div class="card">
                     <h4>Technical Details</h4>
                     <p>Dive into the architecture and technologies behind bringing OpenTPS to the browser.</p>
                     <a href="technical-details.html" class="card-button">Explore</a>
                 </div>
+
                 <div class="card">
                     <h4>Get in Touch</h4>
                     <p>Reach out with questions, feedback, or collaboration ideas using the contact form.</p>
