--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -1,22 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adrian Khlim's Absolute Koala ✿ ITIS 3135 ✿ Slideshow</title>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/default.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="slides-body">
     <header>
         <div data-include="components/header.html" data-replace="%title%:Slideshow"></div>
     </header>
 
-    <main>
-        <h2 class="course-heading">ITIS 3135 Slideshow</h2>
-        
+    <main class="slides-main">
+        <h2 class="slides-heading">ITIS 3135 Slideshow</h2>
+
+        <div class="slides-container">
+            <!-- slides -->
+            <div class="mySlides">
+                <div class="numbertext">1 / 11</div><img src="images/animal.jpg" alt="A for Animal - First A in Adrian">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">2 / 11</div><img src="images/deodorant.jpg" alt="D for Deodorant - D in Adrian">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">3 / 11</div><img src="images/rubberducky.jpg"
+                    alt="R for Rubber Ducky - R in Adrian">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">4 / 11</div><img src="images/ipad.jpg" alt="I for Ipad - I in Adrian">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">5 / 11</div><img src="images/anime.jpg" alt="A for Anime - Second A in Adrian">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">6 / 11</div><img src="images/necklace.jpg" alt="N for Necklace - N in Adrian">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">7 / 11</div><img src="images/khmer.jpg"
+                    alt="K for Khmer Person (me) - K in Khlim">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">8 / 11</div><img src="images/house.jpg" alt="H for House - H in Khlim">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">9 / 11</div><img src="images/limon7.jpg" alt="L for Limon7 - L in Khlim">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">10 / 11</div><img src="images/itsc4114quadtree.jpg"
+                    alt="I for ITSC 4114 Quadtree that I made - I in Khlim">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">11 / 11</div><img src="images/money.jpg" alt="M for Money - M in Khlim">
+            </div>
+
+            <!-- nav arrows -->
+            <a class="prev" onclick="plusSlides(-1)">❮</a>
+            <a class="next" onclick="plusSlides(1)">❯</a>
+
+            <!-- caption -->
+            <div class="caption-container">
+                <p id="caption"></p>
+            </div>
+
+            <!-- thumbnails -->
+            <div class="row">
+                <div class="column"><img class="demo" src="images/animal-thumb.jpg" onclick="currentSlide(1)"
+                        alt="A for Animal - First A in Adrian"></div>
+                <div class="column"><img class="demo" src="images/deodorant-thumb.jpg" onclick="currentSlide(2)"
+                        alt="D for Deodorant - D in Adrian"></div>
+                <div class="column"><img class="demo" src="images/rubberducky-thumb.jpg" onclick="currentSlide(3)"
+                        alt="R for Rubber Ducky - R in Adrian"></div>
+                <div class="column"><img class="demo" src="images/ipad-thumb.jpg" onclick="currentSlide(4)"
+                        alt="I for Ipad - I in Adrian"></div>
+                <div class="column"><img class="demo" src="images/anime-thumb.jpg" onclick="currentSlide(5)"
+                        alt="A for Anime - Second A in Adrian"></div>
+                <div class="column"><img class="demo" src="images/necklace-thumb.jpg" onclick="currentSlide(6)"
+                        alt="N for Necklace - N in Adrian"></div>
+                <div class="column"><img class="demo" src="images/khmer-thumb.jpg" onclick="currentSlide(7)"
+                        alt="K for Khmer Person (me) - K in Khlim"></div>
+                <div class="column"><img class="demo" src="images/house-thumb.jpg" onclick="currentSlide(8)"
+                        alt="H for House - H in Khlim"></div>
+                <div class="column"><img class="demo" src="images/limon7-thumb.jpg" onclick="currentSlide(9)"
+                        alt="L for Limon7 - L in Khlim"></div>
+                <div class="column"><img class="demo" src="images/itsc4114quadtree-thumb.jpg" onclick="currentSlide(10)"
+                        alt="I for ITSC 4114 Quadtree that I made - I in Khlim"></div>
+                <div class="column"><img class="demo" src="images/money-thumb.jpg" onclick="currentSlide(11)"
+                        alt="M for Money - M in Khlim"></div>
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -24,5 +100,7 @@
     </footer>
 
     <script src="scripts/HTMLInclude.min.js"></script>
+    <script src="scripts/slides.js"></script>
 </body>
+
 </html>
