--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -59,7 +59,7 @@
                 <td>Kim Nguyen</td> <td>knguyen3@marsupials.net</td> <td>2</td>
             </tr>
             <tr>
-                <td>Sarah Wollesen</td> <td>knguyen3@marsupials.net</td> <td>5</td>
+                <td>Sarah Wollesen</td> <td>swolley@koalaforce.org</td> <td>5</td>
             </tr>
         </table>
 
@@ -123,7 +123,7 @@
                   </tr>
                   <tr>
                     <td headers="name">Sarah Wollesen</td>
-                    <td headers="email">knguyen3@marsupials.net</td>
+                    <td headers="email">swolley@koalaforce.org</td>
                     <td headers="years">5</td>
                     <td headers="salary">$90,000</td>
                   </tr>
