--- a/itis3135/project/index.html
+++ b/itis3135/project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RadiateTPS - Home</title>
+    <title>Home - RadiateTPS</title>
     <link rel="stylesheet" href="styles/default.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
@@ -12,7 +12,7 @@
     <header>
         <div data-include="components/header.html"></div>
     </header>
-
+    <!-- "hero section" where my banner and logo are displayed for aesthetics -->
     <img id="heroimg" src="images/hero_img2.png" alt="Free mountain, lake, moon vector edited by me">
     <main id="main-content">
         <section class="hero">
@@ -22,7 +22,7 @@
             </p>
         </section>
 
-
+        <!-- cards with nav section -->
         <section class="cards-section">
             <h3 class="cards-section-h3">What You'll Find Here</h3>
             <div class="card-g">
