--- a/itis3135/project/technical-details.html
+++ b/itis3135/project/technical-details.html
@@ -20,7 +20,7 @@
                 RadiateTPS is powered by a combination of web technologies and DICOM handling libraries. It takes advantage of OpenTPS's Python-based dose computation capabilities and modern frontend frameworks to deliver a responsive and educational experience.
             </p>
         </section>
-
+        <!-- accordian expandables -->
         <div class="accordion">
             <div class="accordion-item">
                 <div class="accordion-question" data-target="section1">Server-Side vs. Browser Rendering</div>
@@ -62,15 +62,7 @@
         <div data-include="components/footer.html"></div>
     </footer>
 
-    <script>
-        document.querySelectorAll('.accordion-question').forEach((question) => {
-            question.addEventListener('click', () => {
-                const targetId = question.getAttribute('data-target');
-                const targetAnswer = document.getElementById(targetId);
-                targetAnswer.classList.toggle('expanded');
-            });
-        });
-    </script>
+    <script src="scripts/accordion.js"></script>
     <script src="scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
