--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<a href = "https://adriankusa.github.io/itis3135"> GitHub ITIS3135 Course Page</a> &nbsp; | &nbsp;
 				<a href="ajkenterprise.com"> A JORDAN KHLIM ENTERPRISE© 2025</a> &nbsp; | &nbsp;
 				<a href="https://www.linkedin.com/in/adriankhlim/"> LinkedIn </a> &nbsp;  &nbsp;
-				<p class="footer">Designed by Adrian Khlim, <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/responsive-web-design">Certified in Responsive Web Design</a></p>
+				<p class="footer">Designed by Adrian Khlim, <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/responsive-web-design">Certified in Responsive Web Design</a>, , <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/javascript-algorithms-and-data-structures-v8">Certified in JS</a></p>
 			</nav>
 		
 		</footer>
